# RenderingMarkdown

./: .gitignore  CMakeLists.txt  README.md  build-temp.sh  build.sh  start.sh  temp.sh
includes/: lexer.h  parser.h  rule.h
includes/rules/: bold_rule.h  code_rule.h  heading_rule.h  horizontalline_rule.h  italic_rule.h  link_rule.h  list_rule.h
src/: lexer.cpp  main.cpp  parser.cpp
src/definition/: bold_rule.cc  code_rule.cc  heading_rule.cc  horizontalline_rule.cc  italic_rule.cc  link_rule.cc  list_rule.cc
tools/: clearResults.sh
utils/: formatting.css
